--- a/index.html
+++ b/index.html
@@ -115,6 +115,41 @@
 		</section>
 	</div>
 
+	<div class="box">
+		<section class="hit_rate">
+			<svg id="plot" viewBox="-10 -10 220 120" width="100%" height="100%">
+				<style>
+					.axis {
+						stroke-width: 1;
+						stroke: rgb(10, 10, 10);
+					}
+					text {
+						fill: rgb(11, 11, 11);
+						font-size: 4px;
+						text-anchor: middle;
+					}
+			
+					circle {
+						fill: white;
+					}
+
+			
+					.cold {
+						fill: rgb(79, 89, 250);
+					}
+			
+					.warm {
+						fill: rgb(255, 80, 68);
+					}
+			
+				</style>
+			
+			
+			
+			</svg>
+		</section>
+	</div>
+
 
 <script src="lib/d3.min.js"></script>
 <script src="lib/topojson.min.js"></script>
