--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 	</div>
 
 	<div class="box">
+		<h4>Hit Rate</h4>
 		<section class="hit_rate">
 			<svg id="plot" viewBox="-10 -10 220 120" width="100%" height="100%">
 				<style>
@@ -148,6 +149,9 @@
 			
 			</svg>
 		</section>
+		<p>
+		In this second view, we want to focus on illustrating potential bias by measuring the hit rate (an arrested person is found guilty of an infraction). The size of the bubbles will represent the number of arrests and, the (x,y) position, will illustrate the hit rate of each population in Texas compared to the respective hit rate in California.
+		</p>
 	</div>
 
 
