added button to maps

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 			</p>
 		<section class="usa_map">
 			<div id ="map_div" >
-				<svg id="map-plot2" viewBox="0 0 960 500" width="60%">
+				<select id="selectButtonRace"></select>
+
+				<svg id="map-plot" viewBox="0 0 960 500" width="80%">
 					<style>
 
 						.county {
@@ -81,9 +83,10 @@
 			</p>
 		<section class="usa_map">
 			<div id ="map_div" >
-				<svg id="map-plot" viewBox="0 0 960 500" width="60%">
-					<style>
+				<select id="selectButtonGender"></select>
 
+				<svg id="map-plot2" viewBox="0 0 960 500" width="80%">
+					<style>
 						.county {
 							stroke: rgb(25, 25, 25);
 							stroke-width: 1px;
