--- a/index.html
+++ b/index.html
@@ -68,6 +68,43 @@
 
 					</style>
 				</svg>
+				<svg id="slider" viewBox="0 0 960 100" width="70%">
+					<style>
+						 body {
+						 font-family:"avenir next", Arial, sans-serif;
+						 font-size: 12px;
+						 color: #FFFFFF;
+						 }
+						 .ticks {
+						 font-size: 10px;
+						 }
+						 .track,
+						 .track-inset,
+						 .track-overlay {
+						 stroke-linecap: round;
+						 }
+						 .track {
+						 stroke: #000;
+						 stroke-opacity: 0.3;
+						 stroke-width: 10px;
+						 }
+						 .track-inset {
+						 stroke: #ddd;
+						 stroke-width: 8px;
+						 }
+						 .track-overlay {
+						 pointer-events: stroke;
+						 stroke-width: 50px;
+						 stroke: transparent;
+						 cursor: crosshair;
+						 }
+						 .handle {
+						 fill: #fff;
+						 stroke: #000;
+						 stroke-opacity: 0.5;
+						 stroke-width: 1.25px;
+						 }
+					</style>
 			</div>
 		</section>
 
@@ -114,6 +151,8 @@
 
 					</style>
 				</svg>
+				
+</svg>
 			</div>
 		</section>
 	</div>
