--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 						 stroke-width: 1.25px;
 						 }
 					</style>
+				</svg>
 			</div>
 		</section>
 
@@ -144,6 +145,39 @@
 							color: white;
 							}
 
+					</style>
+				</svg>
+				<svg id="slider2" viewBox="0 0 960 100" width="70%">
+					<style>
+						 .ticks {
+						 font-size: 10px;
+						 }
+						 .track,
+						 .track-inset,
+						 .track-overlay {
+						 stroke-linecap: round;
+						 }
+						 .track {
+						 stroke: #000;
+						 stroke-opacity: 0.3;
+						 stroke-width: 10px;
+						 }
+						 .track-inset {
+						 stroke: #ddd;
+						 stroke-width: 10px;
+						 }
+						 .track-overlay {
+						 pointer-events: stroke;
+						 stroke-width: 50px;
+						 stroke: transparent;
+						 cursor: crosshair;
+						 }
+						 .handle {
+						 fill: #fff;
+						 stroke: #000;
+						 stroke-opacity: 0.5;
+						 stroke-width: 1.25px;
+						 }
 					</style>
 				</svg>
 				
