--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<svg id="map-plot2" viewBox="0 0 960 500" width="80%">
 					<style>
 						.county {
-							stroke: rgb(25, 25, 25);
+							stroke: rgb(27, 26, 26);
 							stroke-width: 1px;
 							fill: white
 						}
@@ -147,11 +147,9 @@
 
 					</style>
 				</svg>
-				<svg id="slider2" viewBox="0 0 960 100" width="70%">
+				<svg id="slider2" viewBox="0 0 960 100" width="100%">
 					<style>
-						 .ticks {
-						 font-size: 10px;
-						 }
+						 
 						 .track,
 						 .track-inset,
 						 .track-overlay {
@@ -163,7 +161,7 @@
 						 stroke-width: 10px;
 						 }
 						 .track-inset {
-						 stroke: #ddd;
+						 stroke: #eadfdf;
 						 stroke-width: 10px;
 						 }
 						 .track-overlay {
