added skeleton graph

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div id ="map_div" >
 				<select id="selectButtonRace"></select>
 
-				<svg id="map-plot" viewBox="0 0 960 500" width="80%">
+				<svg id="map-plot" viewBox="0 0 960 500" width="100%">
 					<style>
 
 						.county {
@@ -68,7 +68,10 @@
 
 					</style>
 				</svg>
-				<svg id="slider" viewBox="0 0 960 100" width="70%">
+			</div>
+			<div id="line-chart"></div>
+			<div id ="slider_div" >
+				<svg id="slider" viewBox="0 0 960 80" width="70%">
 					<style>
 						 .ticks {
 						 font-size: 10px;
@@ -102,6 +105,7 @@
 					</style>
 				</svg>
 			</div>
+			
 		</section>
 
 		<p>
@@ -147,6 +151,9 @@
 
 					</style>
 				</svg>
+			</div>
+			<div id="line-chart2"></div>
+			<div id ="slider_div2" ></div>
 				<svg id="slider2" viewBox="0 0 960 100" width="100%">
 					<style>
 						 
@@ -178,8 +185,6 @@
 						 }
 					</style>
 				</svg>
-				
-</svg>
 			</div>
 		</section>
 	</div>
