--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 
 <body>
 
+	<nav>
+		<ul class="width-limited">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="map_ethni.html">Map View Ethnicity</a></li>
+			<li><a href="map_gender.html">Map View Gender</a></li>
+			<li><a href="map_hit_rate.html">Hit Rate</a></li>
+		</ul>
+	</nav>
+
 	<header class="title-row">
 		<h1> My Visualization Project </h1>
 	</header>
