--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 	<nav>
 		<ul class="width-limited">
 			<li><a href="index.html">Home</a></li>
-			<li><a href="map_ethni.html">Map View Ethnicity</a></li>
-			<li><a href="map_gender.html">Map View Gender</a></li>
+			<li><a href="map_ethni.html">Map View</a></li>
 			<li><a href="map_hit_rate.html">Hit Rate</a></li>
 		</ul>
 	</nav>
 
 	<header class="title-row">
-		<h1> My Visualization Project </h1>
+		<h1> Comparing racial and gender disparities in police stops between states in USA </h1>
 	</header>
 
 	<main class="width-limited">
@@ -38,241 +37,10 @@
 		</p>
 	</main>
 
-	<div class="box">
-		<h4>Map view ethnicity</h4>
-			<p>
-				It will be possible to visualize the respective number of police arrest of Black, White and Hispanic persons in the different counties of California and Texas. With the help of a cursor it will be possible to observe the evolution of the number of arrests between 2009 and 2016.
-			</p>
-		<section class="usa_map">
-			<div id ="map_div" >
-				<select id="selectButtonRace"></select>
-
-				<svg id="map-plot" viewBox="0 0 960 500" width="100%">
-					<style>
-
-						.county {
-							stroke: rgb(25, 25, 25);
-							stroke-width: 1px;
-							fill: white
-						}
-
-						.county:hover {
-							fill: blue
-						}
-
-						.county_name {
-							fill: rgba(0, 0, 0, 0);
-							font-size: 15px;
-						}
-
-						.tooltip {
-							background-color: black;
-							border: none;
-							border-radius: 5px;
-							padding: 15px;
-							min-width: 400px;
-							text-align: left;
-							color: white;
-							}
-
-					</style>
-				</svg>
-			</div>
-			<div id="line-chart"></div>
-			<div id ="slider_div" >
-				<svg id="slider" viewBox="0 0 960 80" width="70%">
-					<style>
-						 .ticks {
-						 font-size: 10px;
-						 }
-						 .track,
-						 .track-inset,
-						 .track-overlay {
-						 stroke-linecap: round;
-						 }
-						 .track {
-						 stroke: #000;
-						 stroke-opacity: 0.3;
-						 stroke-width: 10px;
-						 }
-						 .track-inset {
-						 stroke: #ddd;
-						 stroke-width: 10px;
-						 }
-						 .track-overlay {
-						 pointer-events: stroke;
-						 stroke-width: 50px;
-						 stroke: transparent;
-						 cursor: crosshair;
-						 }
-						 .handle {
-						 fill: #fff;
-						 stroke: #000;
-						 stroke-opacity: 0.5;
-						 stroke-width: 1.25px;
-						 }
-					</style>
-				</svg>
-			</div>
-			
-		</section>
-
-		<p>
-			Here will be some analysis of the arrest map.
-		</p>
-	</div>
-
-	<div class="box">
-		<h4>Map view gender</h4>
-			<p>
-				It will also be possible to similarly visualize the numbers of arrests considering the gender of the person arrested. This could showcase a potential evolution of the percentage of women apprehended across time. We might also observe a difference in the ratio of arrested women between the democratic state of California and the republican state of Texas that we will represent with a color gradient.
-			</p>
-		<section class="usa_map">
-			<div id ="map_div" >
-				<select id="selectButtonGender"></select>
-
-				<svg id="map-plot2" viewBox="0 0 960 500" width="80%">
-					<style>
-						.county {
-							stroke: rgb(27, 26, 26);
-							stroke-width: 1px;
-							fill: white
-						}
-
-						.county:hover {
-							fill: blue
-						}
-
-						.county_name {
-							fill: rgba(0, 0, 0, 0);
-							font-size: 15px;
-						}
-
-						.tooltip {
-							background-color: black;
-							border: none;
-							border-radius: 5px;
-							padding: 15px;
-							min-width: 400px;
-							text-align: left;
-							color: white;
-							}
-
-					</style>
-				</svg>
-			</div>
-			<div id="line-chart2"></div>
-			<div id ="slider_div2" ></div>
-				<svg id="slider2" viewBox="0 0 960 100" width="100%">
-					<style>
-						 
-						 .track,
-						 .track-inset,
-						 .track-overlay {
-						 stroke-linecap: round;
-						 }
-						 .track {
-						 stroke: #000;
-						 stroke-opacity: 0.3;
-						 stroke-width: 10px;
-						 }
-						 .track-inset {
-						 stroke: #eadfdf;
-						 stroke-width: 10px;
-						 }
-						 .track-overlay {
-						 pointer-events: stroke;
-						 stroke-width: 50px;
-						 stroke: transparent;
-						 cursor: crosshair;
-						 }
-						 .handle {
-						 fill: #fff;
-						 stroke: #000;
-						 stroke-opacity: 0.5;
-						 stroke-width: 1.25px;
-						 }
-					</style>
-				</svg>
-			</div>
-		</section>
-	</div>
-
-	<div class="box">
-		<h4>Hit Rate</h4>
-		<section class="hit_rate">
-			<svg id="plot" viewBox="-10 -10 220 120" width="100%" height="100%">
-				<style>
-					.axis {
-						stroke-width: 1;
-						stroke: rgb(10, 10, 10);
-					}
-					text {
-						fill: rgb(11, 11, 11);
-						font-size: 4px;
-						text-anchor: middle;
-					}
-			
-					circle {
-						fill: white;
-					}
-
-			
-					.cold {
-						fill: rgb(79, 89, 250);
-					}
-			
-					.warm {
-						fill: rgb(255, 80, 68);
-					}
-			
-				</style>
-			
-			
-			
-			</svg>
-			<svg id="slider3" viewBox="0 0 960 100" width="70%">
-				<style>
-					 .ticks {
-					 font-size: 10px;
-					 }
-					 .track,
-					 .track-inset,
-					 .track-overlay {
-					 stroke-linecap: round;
-					 }
-					 .track {
-					 stroke: #000;
-					 stroke-opacity: 0.3;
-					 stroke-width: 10px;
-					 }
-					 .track-inset {
-					 stroke: #ddd;
-					 stroke-width: 10px;
-					 }
-					 .track-overlay {
-					 pointer-events: stroke;
-					 stroke-width: 50px;
-					 stroke: transparent;
-					 cursor: crosshair;
-					 }
-					 .handle {
-					 fill: #fff;
-					 stroke: #000;
-					 stroke-opacity: 0.5;
-					 stroke-width: 1.25px;
-					 }
-				</style>
-			</svg>
-		</section>
-		<p>
-		In this second view, we want to focus on illustrating potential bias by measuring the hit rate (an arrested person is found guilty of an infraction). The size of the bubbles will represent the number of arrests and, the (x,y) position, will illustrate the hit rate of each population in Texas compared to the respective hit rate in California.
-		</p>
-	</div>
 
 
 <script src="lib/d3.min.js"></script>
 <script src="lib/topojson.min.js"></script>
-<script src="js/main.js"></script>
+
 </body>
 </html>
