--- a/map_view.html
+++ b/map_view.html
@@ -18,8 +18,7 @@
 <nav>
 	<ul class="width-limited">
 		<li><a href="index.html">Home</a></li>
-		<li><a href="map_ethni.html">Map View Ethnicity</a></li>
-		<li><a href="map_gender.html">Map View Gender</a></li>
+		<li><a href="map_view.html">Map View Ethnicity</a></li>
 		<li><a href="map_hit_rate.html">Hit Rate</a></li>
 	</ul>
 </nav>
