skeleton of index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<ul class="width-limited">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="map_view.html">Map View</a></li>
-			<li><a href="map_hit_rate.html">Hit Rate</a></li>
+			<li><a href="hit_rate.html">Hit Rate</a></li>
 		</ul>
 	</nav>
 
@@ -27,18 +27,42 @@
 		<h1> Comparing racial and gender disparities in police stops between states in USA </h1>
 	</header>
 
-	<main class="width-limited">
-		<h3>Introduction</h3>
-		<p>
-			In this project, we want to investigate a potential variation in racial bias in police stops from 2009 to
-			2016. We also want to explore, in case such variations exist, if those are constant across
-			different states of America. To simplify our investigation, we will focus our research on
-			California (mostly Democrat) and Texas (mostly Republican).
-		</p>
-	</main>
+
+		<div2 class = box_left>
+			<h3>Map View plot</h3>
+			<p>
+				In this project, we want to investigate a potential variation in racial bias in police stops from 2009 to
+				2016. We also want to explore, in case such variations exist, if those are constant across
+				different states of America. To simplify our investigation, we will focus our research on
+				California (mostly Democrat) and Texas (mostly Republican).
+			</p>
+		</div2>
+
+		<div2 class = box_right>
+			<p>
+				<iframe src="https://giphy.com/embed/JIX9t2j0ZTN9S" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/JIX9t2j0ZTN9S">via GIPHY</a></p>
+			</p>
+		</div2>
+
+		<div2 class = box_left>
+			<p>
+				<iframe src="https://giphy.com/embed/JIX9t2j0ZTN9S" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/JIX9t2j0ZTN9S">via GIPHY</a></p>
+			</p>
+		</div2>
+
+		<div2 class = box_right>
+			<h4>Hit Rate plot</h4>
+			<p>
+				In this project, we want to investigate a potential variation in racial bias in police stops from 2009 to
+				2016. We also want to explore, in case such variations exist, if those are constant across
+				different states of America. To simplify our investigation, we will focus our research on
+				California (mostly Democrat) and Texas (mostly Republican).
+			</p>
+		</div2>
 
 
 
+	
 <script src="lib/d3.min.js"></script>
 <script src="lib/topojson.min.js"></script>
 
