--- a/hit_rate.html
+++ b/hit_rate.html
@@ -19,17 +19,14 @@
 	<ul class="width-limited">
 		<li><a href="index.html">Home</a></li>
 		<li><a href="map_view.html">Map View</a></li>
-		<li><a href="map_hit_rate.html">Hit Rate</a></li>
+		<li><a href="hit_rate.html">Hit Rate</a></li>
 	</ul>
 </nav>
 
-<header class="title-row">
-	<h1> Our team </h1>
-</header>
 
 <main class="width-limited">
 	<div class="box">
-		<h4>Hit Rate</h4>
+		<title_plot>Hit Rate</title_plot>
 		<section class="hit_rate">
 			<svg id="plot" viewBox="-10 -10 220 120" width="100%" height="100%">
 				<style>
