--- a/map_view.html
+++ b/map_view.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Control+Z Zone</title>
+	<title>Arrestation in USA</title>
 	<meta name="author" content="test">
 
 	<link rel="stylesheet" href="css/style.css">
@@ -15,20 +15,17 @@
 
 <body>
 
-<nav>
-	<ul class="width-limited">
-		<li><a href="index.html">Home</a></li>
-		<li><a href="map_view.html">Map View</a></li>
-		<li><a href="map_hit_rate.html">Hit Rate</a></li>
-	</ul>
-</nav>
+	<nav>
+		<ul class="width-limited">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="map_view.html">Map View</a></li>
+			<li><a href="hit_rate.html">Hit Rate</a></li>
+		</ul>
+	</nav>
 
-<header class="title-row">
-	<h1> My Visualization Project - Data Sources</h1>
-</header>
 
 <div class="box">
-	<h4>Map view ethnicity</h4>
+	<title_plot>Map view ethnicity</title_plot>
 		<p>
 			It will be possible to visualize the respective number of police arrest of Black, White and Hispanic persons in the different counties of California and Texas. With the help of a cursor it will be possible to observe the evolution of the number of arrests between 2009 and 2016.
 		</p>
