--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Control+Z Zone</title>
+	<title>Arrestation in USA</title>
 	<meta name="author" content="test">
 
 	<link rel="stylesheet" href="css/style.css">
@@ -34,14 +34,21 @@
 				In this project, we want to investigate a potential variation in racial bias in police stops from 2009 to
 				2016. We also want to explore, in case such variations exist, if those are constant across
 				different states of America. To simplify our investigation, we will focus our research on
+				California (mostly Democrat) and Texas (mostly Republican).In this project, we want to investigate a potential variation in racial bias in police stops from 2009 to
+				2016. We also want to explore, in case such variations exist, if those are constant across
+				different states of America. To simplify our investigation, we will focus our research on
 				California (mostly Democrat) and Texas (mostly Republican).
+
+				
 			</p>
+			<a href="map_view.html"><button class="button_link">Go to the viz!</button></a>
 		</div2>
 
 		<div2 class = box_right>
 			<p>
 				<iframe src="https://giphy.com/embed/JIX9t2j0ZTN9S" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/JIX9t2j0ZTN9S">via GIPHY</a></p>
 			</p>
+
 		</div2>
 
 		<div2 class = box_left>
@@ -56,8 +63,14 @@
 				In this project, we want to investigate a potential variation in racial bias in police stops from 2009 to
 				2016. We also want to explore, in case such variations exist, if those are constant across
 				different states of America. To simplify our investigation, we will focus our research on
+				California (mostly Democrat) and Texas (mostly Republican).In this project, we want to investigate a potential variation in racial bias in police stops from 2009 to
+				2016. We also want to explore, in case such variations exist, if those are constant across
+				different states of America. To simplify our investigation, we will focus our research on
 				California (mostly Democrat) and Texas (mostly Republican).
+
+				
 			</p>
+			<a href="hit_rate.html"><button class="button_link">Go to the viz!</button></a>
 		</div2>
 
 
