add graph two states

--- a/map_view.html
+++ b/map_view.html
@@ -51,7 +51,7 @@
 					}
 				 </style>
 			  </div>
-			<svg id="map-plot" viewBox="0 0 960 400" width="100%">
+			<svg id="map-plot" viewBox="0 0 1020 400" width="100%">
 				<style>
 
 					.county {
@@ -84,7 +84,7 @@
 		</div>
 		<div id ="slider_div" >
 			<button id="play-button" class = "separator">Play</button>
-			<svg id="slider" viewBox="0 0 960 80" width="70%">
+			<svg id="slider" viewBox="0 0 1200 80" width="80%">
 				<style>
 					 .ticks {
 					 font-size: 10px;
@@ -118,7 +118,9 @@
 				</style>
 			</svg>
 		</div>
-		<div id="line-chart"></div>
+		<div id="line-chart">
+			<svg id="chart" viewBox="0 0 1200 300" width="100%"></svg>
+		</div>
 	</section>
 	<p>
 		Here will be some analysis of the arrest map.
