hit rate: added play, x=y line + legend

--- a/hit_rate.html
+++ b/hit_rate.html
@@ -54,43 +54,43 @@
 					}
 			
 				</style>
-			
-			
-			
 			</svg>
-			<svg id="slider3" viewBox="0 0 960 100" width="70%">
-				<style>
-					 .ticks {
-					 font-size: 10px;
-					 }
-					 .track,
-					 .track-inset,
-					 .track-overlay {
-					 stroke-linecap: round;
-					 }
-					 .track {
-					 stroke: #000;
-					 stroke-opacity: 0.3;
-					 stroke-width: 10px;
-					 }
-					 .track-inset {
-					 stroke: #ddd;
-					 stroke-width: 10px;
-					 }
-					 .track-overlay {
-					 pointer-events: stroke;
-					 stroke-width: 50px;
-					 stroke: transparent;
-					 cursor: crosshair;
-					 }
-					 .handle {
-					 fill: #fff;
-					 stroke: #000;
-					 stroke-opacity: 0.5;
-					 stroke-width: 1.25px;
-					 }
-				</style>
-			</svg>
+			<div class="slider">
+				<button id="play-button-hit" class = "separator">Play</button>
+				<svg id="slider3" viewBox="0 0 960 100" width="70%">
+					<style>
+						.ticks {
+						font-size: 10px;
+						}
+						.track,
+						.track-inset,
+						.track-overlay {
+						stroke-linecap: round;
+						}
+						.track {
+						stroke: #000;
+						stroke-opacity: 0.3;
+						stroke-width: 10px;
+						}
+						.track-inset {
+						stroke: #ddd;
+						stroke-width: 10px;
+						}
+						.track-overlay {
+						pointer-events: stroke;
+						stroke-width: 50px;
+						stroke: transparent;
+						cursor: crosshair;
+						}
+						.handle {
+						fill: #fff;
+						stroke: #000;
+						stroke-opacity: 0.5;
+						stroke-width: 1.25px;
+						}
+					</style>
+				</svg>
+			</div>
 		</section>
 		<p>
 		In this second view, we want to focus on illustrating potential bias by measuring the hit rate (an arrested person is found guilty of an infraction). The size of the bubbles will represent the number of arrests and, the (x,y) position, will illustrate the hit rate of each population in Texas compared to the respective hit rate in California.
