--- a/hit_rate.html
+++ b/hit_rate.html
@@ -15,13 +15,14 @@
 
 <body>
 
-<nav>
-	<ul class="width-limited">
-		<li><a href="index.html">Home</a></li>
-		<li><a href="map_view.html">Map View</a></li>
-		<li><a href="hit_rate.html">Hit Rate</a></li>
-	</ul>
-</nav>
+	<nav>
+		<ul class="width-limited">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="map_view.html">Map View</a></li>
+			<li><a href="hit_rate.html">Hit Rate</a></li>
+            <li><a href="team.html">Team</a></li>
+		</ul>
+	</nav>
 
 
 <main class="width-limited">
