--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="map_view.html">Map View</a></li>
 			<li><a href="hit_rate.html">Hit Rate</a></li>
+            <li><a href="team.html">Team</a></li>
 		</ul>
 	</nav>
 
