--- a/map_view.html
+++ b/map_view.html
@@ -20,6 +20,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="map_view.html">Map View</a></li>
 			<li><a href="hit_rate.html">Hit Rate</a></li>
+            <li><a href="team.html">Team</a></li>
 		</ul>
 	</nav>
 
@@ -31,10 +32,11 @@
 		</p>
 	<section class="usa_map">
 		<div id ="map_div" >
-			<div id="button_container">
+			<div id="button_container" style="visibility: hidden;">
+				<button id ="map_btn" style = "background-color: #39A9DB; color: rgb(255,255,255) !important" >Map</button>
 				<button id ="race_btn" style = "background-color: #39A9DB; color: rgb(255,255,255) !important" >Race</button>
 				<button id ="gender_btn" style = "background-color: #39A9DB; color: rgb(255,255,255) !important" >Gender</button>
-				<select id="selectButtonRace"></select>
+				<select id="selectButton"></select>
 				 <style>
 					#button_container{
 					width:100%;
@@ -60,9 +62,12 @@
 						fill: white
 					}
 
-					.county:hover {
-						fill: blue
+					.state {
+						stroke: rgb(25, 25, 25);
+						stroke-width: 1px;
+						fill: white
 					}
+
 
 					.county_name {
 						fill: rgba(0, 0, 0, 0);
@@ -83,8 +88,7 @@
 			</svg>
 		</div>
 		<div id ="slider_div" >
-			<button id="play-button" class = "separator">Play</button>
-			<svg id="slider" viewBox="0 0 1200 80" width="80%">
+			<button id="play-button" style="visibility: hidden;" class = "separator">Play</button>
 				<style>
 					 .ticks {
 					 font-size: 10px;
@@ -119,7 +123,6 @@
 			</svg>
 		</div>
 		<div id="line-chart">
-			<svg id="chart" viewBox="0 0 1200 300" width="100%"></svg>
 		</div>
 	</section>
 	<p>
