--- a/map_view.html
+++ b/map_view.html
@@ -38,15 +38,21 @@
 				<button id ="gender_btn" style = "background-color: #39A9DB; color: rgb(255,255,255) !important" >Gender</button>
 				<select id="selectButton"></select>
 				 <style>
+
+					#map_btn{
+						position: relative;
+						left: -400px;
+					}
+
 					#button_container{
-					width:100%;
-					text-align: center;
+						width:100%;
+						text-align: center;
 					}
 					#button_container > div{
-					display: inline-block;
-					padding-left: 0.5cm;
-					padding-right: 0.5cm;
-					vertical-align: middle;
+						display: inline-block;
+						padding-left: 0.5cm;
+						padding-right: 0.5cm;
+						vertical-align: middle;
 					}
 					#button_container > div > button {
 					  color: rgb(255,255,255);
