--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</nav>
 
 	<header class="title-row">
-		<h1> Comparing racial and gender disparities in police stops between states in USA </h1>
+		<h1> Bias in police stops in the USA </h1>
 	</header>
 
 		<div2 class = box_left>
@@ -34,10 +34,7 @@
 				In this project, we want to investigate a potential variation in racial bias in police stops from 2009 to
 				2016. We also want to explore, in case such variations exist, if those are constant across
 				different states of America. To simplify our investigation, we will focus our research on
-				California (mostly Democrat) and Texas (mostly Republican).In this project, we want to investigate a potential variation in racial bias in police stops from 2009 to
-				2016. We also want to explore, in case such variations exist, if those are constant across
-				different states of America. To simplify our investigation, we will focus our research on
-				California (mostly Democrat) and Texas (mostly Republican).
+			
 
 				
 			</p>
@@ -46,14 +43,14 @@
 
 		<div2 class = box_right>
 			<p>
-				<iframe src="https://giphy.com/embed/JIX9t2j0ZTN9S" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/JIX9t2j0ZTN9S">via GIPHY</a></p>
+				<iframe src="data/map_view.gif" width="580" height="240" frameBorder="0" ></iframe>
 			</p>
 
 		</div2>
 
 		<div2 class = box_left>
 			<p>
-				<iframe src="https://giphy.com/embed/JIX9t2j0ZTN9S" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/JIX9t2j0ZTN9S">via GIPHY</a></p>
+				<iframe src="data/hit_rate.gif" width="580" height="280" frameBorder="0" ></iframe>
 			</p>
 		</div2>
 
