--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 		<div2 class = box_left>
 			<h3>Map View plot</h3>
 			<p>
-				In this project, we want to investigate a potential variation in racial bias in police stops from 2009 to
-				2016. We also want to explore, in case such variations exist, if those are constant across
-				different states of America. To simplify our investigation, we will focus our research on
-			
+				In this project, we want to investigate a potential variation in racial bias in police stops from 2009 to 2016. 
+				We also want to explore, in case such variations exist, if those are constant across different states of America.
+				It will be possible to visualize the respective number of police arrest of Black, White and Hispanic persons
+				in the different counties of California and Texas. With the help of a cursor it will be possible to observe
+				the evolution of the number of arrests between 2009 and 2016.
 
-				
 			</p>
 			<a href="map_view.html"><button class="button_link">Go to the viz!</button></a>
 		</div2>
@@ -57,13 +57,9 @@
 		<div2 class = box_right>
 			<h4>Hit Rate plot</h4>
 			<p>
-				In this project, we want to investigate a potential variation in racial bias in police stops from 2009 to
-				2016. We also want to explore, in case such variations exist, if those are constant across
-				different states of America. To simplify our investigation, we will focus our research on
-				California (mostly Democrat) and Texas (mostly Republican).In this project, we want to investigate a potential variation in racial bias in police stops from 2009 to
-				2016. We also want to explore, in case such variations exist, if those are constant across
-				different states of America. To simplify our investigation, we will focus our research on
-				California (mostly Democrat) and Texas (mostly Republican).
+				We want to focus on illustrating potential bias by measuring the hit rate (an arrested person is found guilty
+				of an infraction). The size of the bubbles will represent the number of arrests and, the (x,y) position,
+				will illustrate the hit rate of each population in Texas compared to the respective hit rate in California.
 
 				
 			</p>
