--- a/map_view.html
+++ b/map_view.html
@@ -147,13 +147,18 @@
 		</div>
 		<div id="line-text">
 			<p>
-				Here will be some analysis of the arrest map.
+				1) A lot of arrest at the border of the texas<br>
+				2) Black and hispanic lot of arrest two hypthesis --> maybe bias by small population, maybe racial bias <br>
+				3) Hispanic arrest at the border of Texas <br>
+				4) difference in relative arrest number between California and texas <br>
+				5) part of california with a lot of arrest is also the Yosemite (ski resort) --> bias ? <br>
 			</p>
 		</div>
 		<div id="line-chart"></div>
 	</section>
 	<p>
-		Here will be some analysis of the arrest map.
+		1) Decreasing arrest number in California <br>
+		2) Texas decrease then increase since 2015
 	</p>
 </div>
 
