--- a/team.html
+++ b/team.html
@@ -25,8 +25,7 @@
 	</nav>
 
     <div class = width-limited>
-        <h5>Meet our Team</h5>
-        <p>Our team of dynamic and qualified EPFL students who developed this project from scratch.</p>
+        <h5>Meet our Team of dynamic and qualified EPFL students</h5>
 	</div>
 
     <div2 class = box_left>
