--- a/hit_rate.html
+++ b/hit_rate.html
@@ -27,9 +27,11 @@
 
 <main class="width-limited">
 	<div class="box">
-		<title_plot>Hit Rate</title_plot>
+		<br>
+		<title_plot>Hit rate comparison</title_plot>
 		<div id="hit_div">
 			<section class="hit_rate">
+				<br> <br>
 				<svg id="plot" viewBox="-10 -10 960 380" width="100%" height="100%">
 					<style>
 						.axis {
@@ -96,7 +98,12 @@
 			</section>
 		</div>
 		<p>
-		In this second view, we want to focus on illustrating potential bias by measuring the hit rate (an arrested person is found guilty of an infraction). The size of the bubbles will represent the number of arrests and, the (x,y) position, will illustrate the hit rate of each population in Texas compared to the respective hit rate in California.
+		In this second view, we want to focus on illustrating potential bias by measuring the hit rate (One person who was
+		searched had contraband on him). The bubble size represent the number of searches per ethnicity, the x-axis and y-axis
+		represent hit rate in Texas and California respectively. Hence, a dot centered under the line y = x represents an
+		ethnicity which has a higher hit rate in Texas than in California, meaning that it is more easily searched in California
+		than in Texas. You can also press the play button to watch the evolution in time automatically.
+
 		</p>
 	</div>
 
