--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<h1> Bias in police stops in the USA </h1>
 	</header>
 
-		<div2 class = box_left>
+		<div2 class = box_left viewBox="0 0 1020 400" width="100%">
 			<h3>Map View plot</h3>
 			<p>
 				In this project, we want to investigate a potential variation in racial bias in police stops from 2009 to 2016. 
@@ -36,31 +36,24 @@
 				It will be possible to visualize the respective number of police arrest of Black, White and Hispanic persons
 				in the different counties of California and Texas. With the help of a cursor it will be possible to observe
 				the evolution of the number of arrests between 2009 and 2016.
+				<br>
+				<iframe src="data/map_view.gif" width="580" height="240" frameBorder="0" alt="alt text" style="float: center"></iframe>
 
 			</p>
 			<a href="map_view.html"><button class="button_link">Go to the viz!</button></a>
 		</div2>
 
-		<div2 class = box_right>
-			<p>
-				<iframe src="data/map_view.gif" width="580" height="240" frameBorder="0" ></iframe>
-			</p>
 
-		</div2>
 
-		<div2 class = box_left>
-			<p>
-				<iframe src="data/hit_rate.gif" width="580" height="280" frameBorder="0" ></iframe>
-			</p>
-		</div2>
 
-		<div2 class = box_right>
+		<div2 class = box_right  viewBox="0 0 1020 400" width="100%">
 			<h4>Hit Rate plot</h4>
 			<p>
 				We want to focus on illustrating potential bias by measuring the hit rate (an arrested person is found guilty
 				of an infraction). The size of the bubbles will represent the number of arrests and, the (x,y) position,
 				will illustrate the hit rate of each population in Texas compared to the respective hit rate in California.
-
+				<br>
+				<iframe src="data/hit_rate.gif" width="580" height="280" frameBorder="0"  ></iframe>
 				
 			</p>
 			<a href="hit_rate.html"><button class="button_link">Go to the viz!</button></a>
