--- a/index.html
+++ b/index.html
@@ -28,7 +28,28 @@
 		<h1> Bias in police stops in the USA </h1>
 	</header>
 
-		<div2 class = box_left viewBox="0 0 1020 400" width="100%">
+		<div class = box width = '100%'>
+			<title_plot>Motivation</title_plot>
+			<p>
+				More than 20 million Americans are stopped for traffic violations each year, making
+				it one of the most common ways for the public to interface with the police. However,
+				there has never been a comprehensive national repository containing information on these
+				interactions. To alter that, the Open Policing Stanford dataset collaborated with Big
+				Local News to collect a dataset of over 200 million traffic stops done in dozens of cities
+				and states throughout the US, making it the largest such endeavor to date.
+				It has become a valuable resource for politicians, scholars, journalists, and campaigners
+				striving to improve policing via data. In our turn, we too want to help ameliorate policing
+				and we will do so in our visualizations by raising awareness on potential racial and gender
+				biases in police stops.
+				<br>
+
+			</p>
+			<br>
+			<br>
+
+		</div>
+
+		<div2 class = box_left width="100%">
 			<h3>Map View plot</h3>
 			<p>
 				In this project, we want to investigate a potential variation in racial bias in police stops from 2009 to 2016. 
@@ -36,7 +57,7 @@
 				It will be possible to visualize the respective number of police arrest of Black, White and Hispanic persons
 				in the different counties of California and Texas. With the help of a cursor it will be possible to observe
 				the evolution of the number of arrests between 2009 and 2016.
-				<br>
+				<br> 
 				<iframe src="data/map_view.gif" width="580" height="240" frameBorder="0" alt="alt text" style="float: center"></iframe>
 
 			</p>
@@ -46,14 +67,14 @@
 
 
 
-		<div2 class = box_right  viewBox="0 0 1020 400" width="100%">
+		<div2 class = box_right width="100%">
 			<h4>Hit Rate plot</h4>
 			<p>
 				We want to focus on illustrating potential bias by measuring the hit rate (an arrested person is found guilty
 				of an infraction). The size of the bubbles will represent the number of arrests and, the (x,y) position,
 				will illustrate the hit rate of each population in Texas compared to the respective hit rate in California.
 				<br>
-				<iframe src="data/hit_rate.gif" width="580" height="280" frameBorder="0"  ></iframe>
+				<iframe src="data/hit_rate.gif"   width="580" height="280"frameBorder="0"  ></iframe>
 				
 			</p>
 			<a href="hit_rate.html"><button class="button_link">Go to the viz!</button></a>
