final for video

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				in the different counties of California and Texas. With the help of a cursor it will be possible to observe
 				the evolution of the number of arrests between 2009 and 2016.
 				<br> 
-				<iframe src="data/map_view.gif" width="580" height="240" frameBorder="0" alt="alt text" style="float: center"></iframe>
+				<iframe src="data/map_view.gif" width="480" height="240" frameBorder="0" alt="alt text" style="float: center"></iframe>
 
 			</p>
 			<a href="map_view.html"><button class="button_link">Go to the viz!</button></a>
@@ -74,7 +74,7 @@
 				of an infraction). The size of the bubbles will represent the number of arrests and, the (x,y) position,
 				will illustrate the hit rate of each population in Texas compared to the respective hit rate in California.
 				<br>
-				<iframe src="data/hit_rate.gif"   width="580" height="280"frameBorder="0"  ></iframe>
+				<iframe src="data/hit_rate.gif"   width="500" height="350" frameBorder="0" alt="alt text" style="float: center" ></iframe>
 				
 			</p>
 			<a href="hit_rate.html"><button class="button_link">Go to the viz!</button></a>
