--- a/team.html
+++ b/team.html
@@ -43,7 +43,7 @@
             Has lost his badge for the third time this month.
             
         </p>
-
+        <br>
     </div2>
 
     <div2 class = box_left>
@@ -59,9 +59,11 @@
     </div2>
 
     <div2 class = box_right>
-        <p>
-            <iframe src="https://giphy.com/embed/JIX9t2j0ZTN9S" width="200" height="200" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/JIX9t2j0ZTN9S">via GIPHY</a></p>
-        </p>
+        <info>
+            <iframe src="https://giphy.com/embed/JIX9t2j0ZTN9S" width="300" height="300" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+           
+        </info>
+        <p><a href="https://giphy.com/gifs/JIX9t2j0ZTN9S">via GIPHY</a></p>
 
     </div2>
 
