--- a/hit_rate.html
+++ b/hit_rate.html
@@ -100,10 +100,11 @@
 		<p>
 		In this second view, we want to focus on illustrating potential bias by measuring the hit rate. It is defined as the number of searches who resulted in
 		contraband being found, divided by the number of searches. We computed the hit rate for each race, both for California and Texas separately and plotted the results
-		on a scatter plot. The bubble size represent the number of searches per ethnicity, the x-axis and y-axis
-		represent hit rate in Texas and California respectively. Hence, a dot centered under the line y = x represents an
+		on a scatter plot. The circle size is proportional to the number of searches for each race, the x-axis and y-axis
+		represent the hit rate for Texas and California respectively. Hence, a dot centered under the line y = x represents an
 		ethnicity which has a higher hit rate in Texas than in California, meaning that it is more easily searched in California
-		than in Texas. You can also press the play button to watch the evolution in time automatically.
+		than in Texas. You can also press the play button to watch the evolution in time automatically. <br>
+		
 
 		</p>
 		<br>
