final version of the site

--- a/hit_rate.html
+++ b/hit_rate.html
@@ -98,13 +98,23 @@
 			</section>
 		</div>
 		<p>
-		In this second view, we want to focus on illustrating potential bias by measuring the hit rate. It is defined as the number of searches who resulted in
-		contraband being found, divided by the number of searches. We computed the hit rate for each race, both for California and Texas separately and plotted the results
-		on a scatter plot. The circle size is proportional to the number of searches for each race, the x-axis and y-axis
-		represent the hit rate for Texas and California respectively. Hence, a dot centered under the line y = x represents an
+		In this second view, we want to focus on illustrating potential bias by measuring the hit rate. It is defined as the <b>number of searches who resulted in
+		contraband being found, divided by the number of searches</b>. We computed the hit rate for each race and plotted the results
+		on a scatter plot. For California, we used the data for the police departments of Oakland, San Diego and San Francisco, while for Texas we used Austin, Plano and
+		San Antonio. We used those cities instead of state patrol data because we didn't have information on whether contraband was found after a search, which is necessary to compute
+		the hit rate.
+		The circle size is proportional to the number of searches for each race, the x-axis and y-axis
+		represent the hit rate for Texas and California respectively. Hence, a dot positioned under the line y=x represents an
 		ethnicity which has a higher hit rate in Texas than in California, meaning that it is more easily searched in California
-		than in Texas. You can also press the play button to watch the evolution in time automatically. <br>
-		
+		than in Texas. You can also press the play button to watch the evolution in time automatically. <br> 
+		<br>
+		Let's first focus on the hit rate of whites. We can see that the circle for whites remains relatively close to the y=x line, going slightly above or slightly below
+		depending on the year. This means that <b>whites are searched on a similar basis in California and in Texas</b>. For Asian and Pacific islanders, the hit rate remains above
+		the y=x line during the whole periode considered except for 2011, suggesting that <b>Asians and Pacific islanders are more easily searched in Texas</b>. Though it is important to remember that the sample
+		size is small for this community.
+		For blacks and hispanics however, the circles remain under the y=x line from 2009 to 2015 where they finally get at the line, going slightly above in 2016. This means that from
+		2009 to 2015 <b>blacks and hispanics were more easily searched in California than in Texas</b>, with some years the hit rate being 2 to 3 times higher in Texas. 
+		The overall trend though is that the circles move closer towards the line, suggesting that the <b>different communities increasingly get searched on similar bases in the two states</b>.
 
 		</p>
 		<br>
