--- a/map_view.html
+++ b/map_view.html
@@ -192,11 +192,11 @@
 		<div id="line-text-below" hidden="hidden">
 			<p>
 				On the left hand side, you can see the total number of stops for each ethnicity in California as a function of the year. Similarly on the right,
-				you can see the total number of stops by ethnicity for Texas. We can see that the number of police stops for the time range 2009-2016 remains quite constant
-				for blacks and asians / pacific islanders in both states. <br>
+				you can see the total number of stops by ethnicity for Texas. We can see that the number of police stops for the time range 2009-2016 remains quite <b>constant
+				for blacks and asians / pacific islanders </b> in both states. <br>
 				<br>
-				However, we observe two different trends for white and hispanics, both in California and in Texas.
-				For California, the number of stops for those two ethnicities decrease steadily from 2010 to 2016. Then we see a sharp drop for 2016 with almost 1 million
+				However, we observe two <b>different trends for white and hispanics</b>, both in California and in Texas.
+				For California, the number of stops for those two ethnicities <b>decrease steadily from 2010 to 2015</b>. Then we see a sharp drop for 2016 with almost 1 million
 				less stops for whites and 700k for hispanics. There can be multiple reasons for this, one of them being that the data we used is police stops of the state patrol and a change in policy might have led
 				to traffic stops being done with a different police authority instead.
 				For Texas, the number of hispanics stopped remains quite constant, but we see a steady decrease of the number of whites stopped from 2009-2015 where
